added event resources
